<resources>
    <string name="app_name">Калькулятор</string>
    <string name="degree">^</string>
    <string name="zero">0</string>
    <string name="point">,</string>
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">–</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="multiplication">×</string>
    <string name="nine">9</string>
    <string name="all_clear">AC</string>
    <string name="clear_button">Clear button</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="error">= Разделить на ноль нельзя</string>
    <string name="tape_length">Довжина смужки</string>
    <string name="basket_price">Ціна кошика</string>
    <string name="bucket_volume">Об\'єм горшика</string>
    <string name="circuit">Довжина кола</string>
    <string name="open">Меню відкрите</string>
    <string name="close">Меню закрите</string>
</resources>